Old log lines gray out, most recent one is bold

--- a/css/mineclick.css
+++ b/css/mineclick.css
@@ -16,6 +16,14 @@
 	float: left;
 }
 
+.logLine {
+	font-weight: bold;
+}
+
+.oldLogLine {
+	color: gray;
+}
+
 .content-center {
 	border: 1px solid black;
 	float: top;
