--- a/css/mineclick.css
+++ b/css/mineclick.css
@@ -2,11 +2,9 @@
 	padding: 10px;
 }
 .page {
-/*	border: 1px solid red;*/
 }
 
 .content-left {
-/*	border: 1px solid green;*/
 	float: left;
 	min-width: 250px;
 	height: 500px;
@@ -37,18 +35,50 @@
 }
 
 .content-right {
-/*	border: 1px solid yellow;*/
 	float: left;
 	min-width: 250px;
 	height: 500px;
 }
 
 .footer {
-/*	border: 1px solid orange;*/
 }
-
-/* MISC */
 
 .clearer {
 	clear: both;
+}
+
+/* tooltips from http://www.cssportal.com/css-tooltip-generator/# */
+.tooltip {
+  position: relative;
+  display: inline;
+}
+.tooltip span {
+  position: absolute;
+  width:140px;
+  color: #FFFFFF;
+  background: #000000;
+  height: 20px;
+  line-height: 20px;
+  text-align: center;
+  visibility: hidden;
+  border-radius: 12px;
+}
+.tooltip span:after {
+  content: '';
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -8px;
+  width: 0; height: 0;
+  border-bottom: 8px solid #000000;
+  border-right: 8px solid transparent;
+  border-left: 8px solid transparent;
+}
+div:hover.tooltip span, h3:hover.tooltip span {
+  visibility: visible;
+  opacity: 0.7;
+  top: 30px;
+  left: 50%;
+  margin-left: -76px;
+  z-index: 999;
 }
