--- a/css/mineclick.css
+++ b/css/mineclick.css
@@ -72,3 +72,30 @@ a:hover, a:active {
   background-color: transparent;
   text-decoration: underline;
 }
+
+#progressbar {
+    width: 100%;
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+    vertical-align: middle;
+    line-height: 30px;
+}
+
+/*.ui-progressbar {
+    position: relative;
+  text-align: center;
+}*/
+
+.progress-label {
+  /*position: absolute;
+  left: 30%;
+  top: 4px;
+  font-weight: bold;
+  text-shadow: 1px 1px 0 #fff;*/
+  float: left;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  vertical-align: middle;
+}
