--- a/css/mineclick.css
+++ b/css/mineclick.css
@@ -100,3 +100,11 @@ a:hover, a:active {
   position: absolute;
   vertical-align: middle;
 }
+
+/* dont want someone rapidly clicking to highlight everything */
+table {
+    -webkit-user-select: none; /* webkit (safari, chrome) browsers */
+    -moz-user-select: none; /* mozilla browsers */
+    -khtml-user-select: none; /* webkit (konqueror) browsers */
+    -ms-user-select: none; /* IE10+ */
+}
