--- a/css/mineclick.css
+++ b/css/mineclick.css
@@ -102,7 +102,7 @@ a:hover, a:active {
 }
 
 /* dont want someone rapidly clicking to highlight everything */
-table {
+div {
     -webkit-user-select: none; /* webkit (safari, chrome) browsers */
     -moz-user-select: none; /* mozilla browsers */
     -khtml-user-select: none; /* webkit (konqueror) browsers */
