--- a/css/mineclick.css
+++ b/css/mineclick.css
@@ -47,7 +47,12 @@
 
 .content-craft {
 	float: left;
-	min-width: 250px;
+	min-width: 100px;
+	height: 300px;
+}
+.content-build {
+	float: left;
+	min-width: 100px;
 	height: 300px;
 }
 
