Setup for category view
Experimenting with CollapsibleLists.js

--- a/css/mineclick.css
+++ b/css/mineclick.css
@@ -67,6 +67,10 @@
   float: left;
 }
 
+.footer-right {
+	float: left;
+}
+
 table.terrainTable, table.terrainTable th, table.terrainTable td {
    border: 1px solid black;
 }
