--- a/css/bs.css
+++ b/css/bs.css
@@ -16,3 +16,9 @@ header, footer {
     margin: 0;
   }
 }
+
+/* .container isn't 100% width, creating my own .container-full class */
+.container-full {
+  margin: 0 auto;
+  width: 100%;
+}
