Integrating top-level CSS and libraries

--- a/css/mineclicks.css
+++ b/css/mineclicks.css
@@ -76,9 +76,10 @@
 	
 }
 
+/*
 table.terrainTable, table.terrainTable th, table.terrainTable td {
    border: 1px solid black;
-}
+}*/
 
 .clearer {
 	clear: both;
